# x-edr-trajectory-planning

./: .bazelrc  .gitmodules  MODULE.bazel  README.md  SECURITY.md  WORKSPACE
.github/workflows/: codeql.yml
trajectory_planning/: BUILD  path_timing_trajectory.cc  path_timing_trajectory.h  path_timing_trajectory_test.cc  path_tools.cc  path_tools.h  path_tools_test.cc  rescale_to_stop.cc  rescale_to_stop.h  rescale_to_stop_test.cc  sampled_trajectory.cc  sampled_trajectory.h  sampled_trajectory_test.cc  time.h  time_optimal_path_timing.cc  time_optimal_path_timing.h  time_optimal_path_timing_test.cc  timeable_path.h  timeable_path_cartesian_spline.cc  timeable_path_cartesian_spline.h  timeable_path_joint_spline.cc  timeable_path_joint_spline.h  trajectory_buffer.cc  trajectory_buffer.h  trajectory_buffer_test.cc  trajectory_planner.h  trajectory_test_utils.h
trajectory_planning/splines/: BUILD  README.md  bspline.h  bspline_base.cc  bspline_base.h  bspline_test.cc  bsplineq.cc  bsplineq.h  bsplineq_test.cc  cubic_spline.cc  cubic_spline.h  cubic_spline_test.cc  finite_difference_test_utils.h  spline_utils.cc  spline_utils.h  spline_utils_test.cc
